--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
             <div class="swiper-slide">
               <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video>
@@ -1004,7 +1004,7 @@
 
               <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video>
@@ -1013,7 +1013,7 @@
 
               <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video>
@@ -1021,7 +1021,7 @@
             <div class="swiper-slide">
               <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video>
@@ -1029,7 +1029,7 @@
             <div class="swiper-slide">
               <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video>
@@ -1037,7 +1037,7 @@
             <div class="swiper-slide">
               <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video>
@@ -1045,20 +1045,20 @@
             <div class="swiper-slide">
               <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video>
             </div>
             <div class="swiper-slide"> <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video></div>
             <div class="swiper-slide"> <video width="100%
               " controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
 
               </video>
